fix typo w07-data-exercise.tex

--- a/compendium/modules/w07-data-exercise.tex
+++ b/compendium/modules/w07-data-exercise.tex
@@ -558,7 +558,7 @@ scala> val ys = xs.reverse ::: xs
 \end{REPL}
 
 
-\Task \emph{Mängd.} En mängd är en samling som garanterar att det inte finns några dubbletter. Det går dessutom väligt snabbt, även i stora mängder, att kolla om ett element finns eller inte i mängden. Elementen i samlingen \code{Set} hamnar ibland, av effektivitetsskäl, i en förvånande ordning.
+\Task \emph{Mängd.} En mängd är en samling som garanterar att det inte finns några dubbletter. Det går dessutom väldigt snabbt, även i stora mängder, att kolla om ett element finns eller inte i mängden. Elementen i samlingen \code{Set} hamnar ibland, av effektivitetsskäl, i en förvånande ordning.
 \begin{REPL}
 scala> val s = Set("Malmö", "Stockholm", "Göteborg", "Köpenhamn", "Oslo")
 s: scala.collection.immutable.Set[String] =
