fix typo w05-classes-exercise-goals.tex

--- a/compendium/modules/w05-classes-exercise-goals.tex
+++ b/compendium/modules/w05-classes-exercise-goals.tex
@@ -8,7 +8,7 @@
 \item Förstå innebörden av begreppen instans och referenslikhet.
 \item Kunna använda nyckelordet \code{private} för att styra synlighet i primärkonstruktor.
 \item Förstå i vilka sammanhang man kan ha nytta av en privat konstruktor.
-\item Kunna implementera en klass utifrån en specikation.
+\item Kunna implementera en klass utifrån en specifikation.
 \item Förstå skillnaden mellan referenslikhet och strukturlikhet.
 \item Känna till hur case-klasser hanterar likhet.
 \item Förstå nyttan med att möjliggöra framtida förändring av attributrepresentation.
