fix typo w10-patterns-exercise.tex
Two typos - and I removed ??? on the two last goals. Or should the goals be changed or removed? (Kunna använda flatMap ... and Kunna skapa partiella funktioner...)

--- a/compendium/modules/w10-patterns-exercise.tex
+++ b/compendium/modules/w10-patterns-exercise.tex
@@ -8,7 +8,7 @@
 \item Kunna skapa och använda \code{match}-uttryck med konstanta värden, garder och mönstermatchning med case-klasser.
 \item Kunna skapa och använda case-objekt för matchningar på uppräknade värden.
 \item Känna till betydelsen av små och stora begynnelsebokstäver i case-grenar i en matchning, samt förstå hur namn binds till värden in en case-gren.
-\item Kunna hantera saknade värden med hjälp av typen \code{Option} och mänstermatchning på \code{Some} och \code{None}.
+\item Kunna hantera saknade värden med hjälp av typen \code{Option} och mönstermatchning på \code{Some} och \code{None}.
 \item Känna till hur metoden \code{unapply} används vid mönstermatchning.
 \item Känna till nyckelordet \code{sealed} och förstå nyttan med förseglade typer.
 \item Känna till \jcode{switch}-satser i Java.
@@ -17,8 +17,8 @@
 \item Känna till skillnaderna mellan \code{try}-\code{catch} i Scala och java.
 \item Kunna implementera \code{equals} med hjälp av en \code{match}-sats, som fungerar för finala klasser utan arv.
 \item Känna till relationen mellan \code{hashcode} och \code{equals}.
-\item Kunna använda \code{flatMap} tillsammans med \code{Option} och \code{Try}. ???
-\item Kunna skapa partiella funktioner med case-uttryck. ???
+\item Kunna använda \code{flatMap} tillsammans med \code{Option} och \code{Try}.
+\item Kunna skapa partiella funktioner med case-uttryck.
 \end{Goals}
 
 \begin{Preparations}
@@ -99,7 +99,7 @@ Vi ska i senare uppgifter undersöka hur typerna \code{Option} och \code{Some} f
 
 \Subtask Lägg till en ny grönsak \code{case class Broccoli} och definiera dess ätbarhet. Ändra i slump-funktionerna så att broccoli blir ovanligare än gurka.
 
-\Subtask\Pen Jämför lösningen med \code{match} i uppgift \ref{task:match-caseclass} och lösningen ovan med polymorfism. Vilka är för- och nackdelarna med respektive lösning. Diskutera två olika situationer på ett hypotetiskt företag som utvecklar mjukvara för jordbrukssektorn: 1) att uppsättningen grönsaker inte ändras särskilt ofta medan definitionerna av ätbarhet ändras väldigt ofta och 2) att uppsättningen grönsaker ändras väldigt ofta men att ätbarhetsdefinitionerna inte ändras särskilt ofta.
+\Subtask\Pen Jämför lösningen med \code{match} i uppgift \ref{task:match-caseclass} och lösningen ovan med polymorfism. Vilka är för- och nackdelarna med respektive lösning? Diskutera två olika situationer på ett hypotetiskt företag som utvecklar mjukvara för jordbrukssektorn: 1) att uppsättningen grönsaker inte ändras särskilt ofta medan definitionerna av ätbarhet ändras väldigt ofta och 2) att uppsättningen grönsaker ändras väldigt ofta men att ätbarhetsdefinitionerna inte ändras särskilt ofta.
 
 
 
