fix typo in w10-patterns-lab.tex

--- a/compendium/modules/w10-patterns-lab.tex
+++ b/compendium/modules/w10-patterns-lab.tex
@@ -61,7 +61,7 @@ git:D:-1 -1 0 2 3 2
 
 \Subtask Implementera metoden \code{isIncludedBy}. Använd \code{.split(";")} för att dela upp strängen \code{filter} i de olika filtersträngarna. För varje filtersträng ska det kollas om denna förekommer i strängen som returneras från \code{toString}. Exempel på filtersträng: "git:G;B;uku". \textbf{Tänk på att metoden \code{forall} kollar om ett villkor gäller för alla möjligheter. I det här fallet räcker det att det gäller för ett av fallen}
 
-\Subtask Implementera \code{isGit} och \code{isUku} som jämför början av strängen \code{s} och returnerar \code{true} om strängen matcher ett gitarrackord resp. ukuleleackord.
+\Subtask Implementera \code{isGit} och \code{isUku} som jämför början av strängen \code{s} och returnerar \code{true} om strängen matchar ett gitarrackord resp. ukuleleackord.
 
 \Subtask Implementera klassen \code{Guitar}. \code{toString} ska vara på samma format som i filen \textit{chords.txt}. \code{tuning} ska vara en strängrepresentation av gitarrens stämning, alltså E2 A2 D3 G3 B3 E4.
 
