fix typos in w11-scalajava-exercise.tex

--- a/compendium/modules/w11-scalajava-exercise.tex
+++ b/compendium/modules/w11-scalajava-exercise.tex
@@ -104,7 +104,7 @@ Funktionen \code{loop} returnerar en 2-tupel med antalet felgissningar och \code
 
 
 \Task \emph{Översätta mellan klasser i Scala och klasser i Java.}
-Klassen \code{Point} nedan är en model av en punkt som kan sparas på begäran i en lista. Listan är privat för kompanjonsobjektet och kan skrivas ut med en metod \code{showSaved}. I koden används en \code{ArrayBuffer}, men i framtiden vill man, vid behov, kunna ändra från \code{ArrayBuffer} till en annan sekvenssamlingsimplementation, t.ex. \code{ListBuffer}, som uppfyller egenskaperna hos supertypen \code{Buffer}, men har andra prestandaegenskaper för olika operationer. Därför är attributet \code{saved} i kompanjonsobjektet deklarerat med den mer generella typen.
+Klassen \code{Point} nedan är en modell av en punkt som kan sparas på begäran i en lista. Listan är privat för kompanjonsobjektet och kan skrivas ut med en metod \code{showSaved}. I koden används en \code{ArrayBuffer}, men i framtiden vill man, vid behov, kunna ändra från \code{ArrayBuffer} till en annan sekvenssamlingsimplementation, t.ex. \code{ListBuffer}, som uppfyller egenskaperna hos supertypen \code{Buffer}, men har andra prestandaegenskaper för olika operationer. Därför är attributet \code{saved} i kompanjonsobjektet deklarerat med den mer generella typen.
 
 \scalainputlisting[numbers=left]{examples/scalajava/Point.scala}
 
@@ -113,7 +113,7 @@ Klassen \code{Point} nedan är en model av en punkt som kan sparas på begäran 
 \emph{Tips och riktlinjer:}
 \begin{enumerate}[nolistsep, noitemsep]
 \item För att namnen inte ska krocka i våra kommande tester, kalla Javatypen för \code{JPoint}.
-\item  I ställert för Scalas \code{ArrayBuffer} och \code{Buffer}, använd Javas \code{ArrayList} och \code{List} som båda ligger i paketet \code{java.util}.
+\item  I stället för Scalas \code{ArrayBuffer} och \code{Buffer}, använd Javas \code{ArrayList} och \code{List} som båda ligger i paketet \code{java.util}.
 \item Undersök dokumentationen för \code{java.util.List} för att hitta en motsvarighet till \code{prepend} för att lägga till i början av listan.
 \item I stället för default-argumentet i Scalas primärkonstruktor, använd en extra Java-konstruktor.
 \item Det finns inga singelobjekt och inga kompanjonsobjekt i Java; istället kan man använda statiska klassmedlemmar. Placera kompanjonsobjektets medlemmars motsvarigheter \emph{inuti} Java-klassen och gör dem till \jcode{static}-medlemmar.
