fix typo in how-to-contribute.tex

--- a/compendium/postchapters/how-to-contribute.tex
+++ b/compendium/postchapters/how-to-contribute.tex
@@ -62,7 +62,7 @@ Att börja med att bidra till dokumentation är ofta en bra väg att komma in i 
 \item Jag skapade därför ett nytt ärende genom att klicka på knappen \emph{New issue} i webbgränssnittet på GitHub och här syns resultatet: \\ \url{https://github.com/scala/scala.github.com/issues/515#} \\ Jag tänkte noga på hur jag skulle formulera mig: 
 
 \begin{itemize}[nolistsep, noitemsep]
-  \item Titlen på issuen är extra viktig: den ska sammanfatta på en enda rad vad det hela rör sig om så att läsaren av rubriken förstår vad problemet är. 
+  \item Titeln på issuen är extra viktig: den ska sammanfatta på en enda rad vad det hela rör sig om så att läsaren av rubriken förstår vad problemet är. 
   \item Jag jobbade sedan med att skriva en tydlig och detaljerad beskrivning av problemet och angav exakt vilken version det gällde. Det är bra att klistra in exempel från Scala REPL och andra testfallskörningar med indata och utdata om relevant. Det är viktigt att problemet går att hitta och återskapa av andra, därför behövs information om vilken version det gäller och ett minimalt testfall som renodlar problemet.
   \item Det är bra att ställa frågor och komma med förslag för att öppna en diskussion om ärendet. Jag frågade speciellt om detta var ett dokumentationsproblem eller en bugg i koden.
   \item OBS! Man ska inte öppna en issue innan man först kollat noga att det verkligen är något som bör åtgärdas och att det inte är en dubblett eller överlapp med andra issues: varje gång man öppnar ett ärende kommer det att generera arbete för andra även om ärendet inte ens till slut resulterade i någon åtgärd... 
